<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtFormula"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:background="@color/yellow"
            android:ems="10"
            android:inputType="text"
            android:textAlignment="textEnd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtMC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_mc"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txtMR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/pink"
                android:text="@string/str_mr"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txtMPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_m_plus"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txtMMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/pink"
                android:text="@string/str_m_minus"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txtMS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_ms"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txtM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/pink"
                android:text="@string/str_m"
                android:textAlignment="center" />
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:onClick="processPercentage"
                    android:id="@+id/btnPercentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="%" />

                <Button
                    android:onClick="processCE"
                    android:id="@+id/btnCE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CE" />

                <Button
                    android:onClick="processC"
                    android:id="@+id/btnC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="C" />

                <Button
                    android:onClick="processBackspace"
                    android:id="@+id/btnBackspace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Back" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:onClick="processInverse"
                    android:id="@+id/btn1_x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1/x" />

                <Button
                    android:onClick="processSquare"
                    android:id="@+id/btnSquare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="x^2" />

                <Button
                    android:onClick="processSqrt"
                    android:id="@+id/btnSqrt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="sqrt(x)" />

                <Button
                    android:onClick="processChooseValue"
                    android:id="@+id/btnDivide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="/" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:onClick="processChooseValue"
                    android:id="@+id/btn7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="7" />

                <Button
                    android:onClick="processChooseValue"
                    android:id="@+id/btn8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="8" />

                <Button
                    android:onClick="processChooseValue"
                    android:id="@+id/btn9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="9" />

                <Button
                    android:onClick="processChooseValue"
                    android:id="@+id/btnMultiply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="*" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:onClick="processChooseValue"
                    android:id="@+id/btn4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4" />

                <Button
                    android:onClick="processChooseValue"
                    android:id="@+id/btn5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5" />

                <Button
                    android:onClick="processChooseValue"
                    android:id="@+id/btn6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6" />

                <Button
                    android:onClick="processChooseValue"
                    android:id="@+id/btnMinus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:onClick="processChooseValue"
                    android:id="@+id/btn1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1" />

                <Button
                    android:onClick="processChooseValue"
                    android:id="@+id/btn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2" />

                <Button
                    android:onClick="processChooseValue"
                    android:id="@+id/btn3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3" />

                <Button
                    android:onClick="processChooseValue"
                    android:id="@+id/btnPlus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:onClick="processChange"
                    android:id="@+id/btnChange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+/-" />

                <Button
                    android:onClick="processChooseValue"
                    android:id="@+id/btn0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0" />

                <Button
                    android:onClick="processChooseValue"
                    android:id="@+id/btnDigit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="." />

                <Button
                    android:id="@+id/btnCalculate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="=" />
            </TableRow>


        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>